[gd_scene load_steps=5 format=3 uid="uid://d3y3rhyjcbafj"]

[ext_resource type="Script" path="res://scenes/game.gd" id="1_6dpwe"]
[ext_resource type="PackedScene" uid="uid://chu2gljmjfbj" path="res://scenes/error_counter.tscn" id="2_syjwh"]
[ext_resource type="PackedScene" uid="uid://tajyogvb0xh6" path="res://sudoku/table.tscn" id="3_lf38u"]
[ext_resource type="PackedScene" uid="uid://cgkiojvo03c4a" path="res://scenes/selector.tscn" id="4_57g5g"]

[node name="Game" type="Node"]
script = ExtResource("1_6dpwe")

[node name="VDividor" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopMargin" type="MarginContainer" parent="VDividor"]
layout_mode = 2
theme_override_constants/margin_top = 25

[node name="TopBtn" type="HBoxContainer" parent="VDividor/TopMargin"]
layout_mode = 2
alignment = 1

[node name="Panel" type="PanelContainer" parent="VDividor/TopMargin/TopBtn"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="ErrorCounter" parent="VDividor/TopMargin/TopBtn/Panel" instance=ExtResource("2_syjwh")]
unique_name_in_owner = true
layout_mode = 2

[node name="ResetBtn" type="Button" parent="VDividor/TopMargin/TopBtn"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = "Reset"

[node name="Center" type="CenterContainer" parent="VDividor"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Table" parent="VDividor/Center" instance=ExtResource("3_lf38u")]
unique_name_in_owner = true
layout_mode = 2

[node name="BottomMargin" type="MarginContainer" parent="VDividor"]
layout_mode = 2
theme_override_constants/margin_bottom = 25

[node name="BottomBtn" type="HBoxContainer" parent="VDividor/BottomMargin"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="Selector - 1" parent="VDividor/BottomMargin/BottomBtn" instance=ExtResource("4_57g5g")]
layout_mode = 2
number = 1

[node name="Selector - 2" parent="VDividor/BottomMargin/BottomBtn" instance=ExtResource("4_57g5g")]
layout_mode = 2
number = 2

[node name="Selector - 3" parent="VDividor/BottomMargin/BottomBtn" instance=ExtResource("4_57g5g")]
layout_mode = 2
number = 3

[node name="Selector - 4" parent="VDividor/BottomMargin/BottomBtn" instance=ExtResource("4_57g5g")]
layout_mode = 2
number = 4

[node name="Selector - 5" parent="VDividor/BottomMargin/BottomBtn" instance=ExtResource("4_57g5g")]
layout_mode = 2
number = 5

[node name="Selector - 6" parent="VDividor/BottomMargin/BottomBtn" instance=ExtResource("4_57g5g")]
layout_mode = 2
number = 6

[node name="Selector - 7" parent="VDividor/BottomMargin/BottomBtn" instance=ExtResource("4_57g5g")]
layout_mode = 2
number = 7

[node name="Selector - 8" parent="VDividor/BottomMargin/BottomBtn" instance=ExtResource("4_57g5g")]
layout_mode = 2
number = 8

[node name="Selector - 9" parent="VDividor/BottomMargin/BottomBtn" instance=ExtResource("4_57g5g")]
layout_mode = 2
number = 9

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 791.0
offset_right = 807.0
grow_vertical = 2

[node name="Difficult" type="VSlider" parent="CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
max_value = 4.0
value = 2.0
rounded = true
tick_count = 5
